Fixed faction/ticket overlap for the vehicle list.
I changed it to fit-height, this prevents the ticket count from overlaying on top of the vehicle text.

--- a/style/style_sm.css
+++ b/style/style_sm.css
@@ -231,7 +231,7 @@ section div h3
 	border-bottom: 1px solid white;
 	overflow: visible;
 	width: 100%;
-	height: 54px;
+	height: fit-content;
 }
 .modal_vertical_bottom
 {
